// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon component Renders initial component 1`] = `
<Icon
  name="active-task"
  title="The Greatest Icon Ever"
>
  <i
    className=""
    title="The Greatest Icon Ever"
  >
    <svg
      viewBox="0 0 30 30"
    >
      <use
        xlinkHref="#undefined"
      />
    </svg>
  </i>
</Icon>
`;

exports[`Icon component Works with MessageDescriptors 1`] = `
<Icon
  name="active-task"
  title={
    Object {
      "defaultMessage": "The Greatest Icon Ever",
      "id": "iconTitle",
    }
  }
>
  <i
    className=""
    title="The Greatest Icon Ever"
  >
    <svg
      viewBox="0 0 30 30"
    >
      <use
        xlinkHref="#undefined"
      />
    </svg>
  </i>
</Icon>
`;
